--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,15 +1,9 @@
 spring.application.name=demo
 # 数据库连接
-spring.datasource.url=jdbc:mysql://localhost:3306/gobang_db?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/gobang_db?useSSL=false&serverTimezone=UTC&characterEncoding=utf8&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# 移除JPA配置
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.format_sql=true
-# spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # MyBatis-Plus配置
 mybatis-plus.type-aliases-package=com.example.demo.model
@@ -20,26 +14,15 @@ spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=guest
 spring.rabbitmq.password=guest
-
-# SQL初始化配置 - 禁用自动初始化
-# 手动执行 db/init-database.sql 文件初始化数据库
-spring.sql.init.mode=never
-# spring.sql.init.schema-locations=classpath:db/schema.sql
-# spring.sql.init.continue-on-error=true
-
-# 禁用Flyway
-spring.flyway.enabled=false
-# spring.flyway.locations=classpath:db/migration
-# spring.flyway.baseline-on-migrate=true
-# spring.flyway.validate-on-migrate=false
-# spring.flyway.clean-on-validation-error=true
+spring.rabbitmq.connection-timeout=5000
+spring.rabbitmq.template.retry.enabled=true
+spring.rabbitmq.template.retry.initial-interval=2000
+spring.rabbitmq.template.retry.max-attempts=3
+spring.rabbitmq.template.retry.multiplier=1.5
+spring.rabbitmq.listener.simple.retry.enabled=true
+spring.rabbitmq.listener.simple.retry.max-attempts=3
 
 # 缓存配置
 spring.cache.type=caffeine
 spring.cache.cache-names=gameBoard,currentPlayer,aiMode
 spring.cache.caffeine.spec=expireAfterAccess=30m,maximumSize=1000
-
-# 日志配置
-logging.level.com.example.demo.service=DEBUG
-logging.level.com.example.demo.controller=DEBUG
-logging.level.org.springframework.cache=TRACE
